fixed minor alignment issues

--- a/less/style.less
+++ b/less/style.less
@@ -173,7 +173,7 @@ img {
 }
 
 .container {
-  margin: 0;
+  margin: 0 auto;
   max-width: 120rem;
   width: 100%;
   padding-left: 2.0rem;
